# ComputerGraphics

./: CMakeLists.txt  camera.cpp  camera.h  lightSource.cpp  lightSource.h  main.cpp  matrix.cpp  matrix.h  object.cpp  object.h  ray.cpp  ray.h  scene.cpp  scene.h  sphere.cpp  sphere.h  square.cpp  square.h  triangle.cpp  triangle.h  vector3.cpp  vector3.h
